# status-page

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  entrypoint.sh  eslint.config.js  package-lock.json  package.json  postcss.config.js  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: bandit.yaml  docker-build.yaml  docker-hub.yaml  docker.yaml  eslint.yaml  helm.yaml  lint.yaml  pyright.yaml  ruff.yaml
dev/postgres/: docker-compose.yaml
helm/: .helmignore  Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-secret.yaml  postgres-service.yaml  secret.yaml  service.yaml  serviceaccount.yaml
scripts/: build-js.mjs
src/alembic/: env.py
src/alembic/versions/: 73f399408d97_initial.py
src/app/: __init__.py  __main__.py  container.py  enums.py
src/app/api/: __init__.py  docs.py  health.py  slowapi.py
src/app/api/middlewares/: __init__.py  authentication.py
src/app/api/models/: authentication.py  group.py  health.py  monitor.py  status.py
src/app/api/v1/: __init__.py  status.py
src/app/database/models/: __init__.py  group.py  incident.py  monitor.py
src/app/frontend/: __init__.py
src/app/frontend/assets/: global.css  (+1 more)
src/app/monitoring/: manager.py  scheduler.py
src/app/repositories/: group.py  incident.py  monitor.py  uow.py
src/app/shared/: _config.py  constants.py  exc_handlers.py  headers.py  jwt_utils.py  log_filters.py
(+68 files in other folders)
